ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-11-18 Laurent Declercq
	- GUI:
		* Fixed #1725: /var/log/rkhunter.log not readable (AGAIN)
	- DATABASE:
		* The Sql files (database.sql, language.sql) are the same for all distributions. Moved into only one directory to 
facilitate the maintenances. 

2009-11-17 Benedikt Heintel
	- GUI:
		* Corrected spelling mistake
		* Fixed #2047: domain_dns table, should have an unique index

2009-11-17 Laurent Declercq
	- SETUP:
		* Deleted several sql files that are not longer needed

2009-11-16 Benedikt Heintel
	- GUI:
		* Modified Database Class

2009-11-16 Laurent Declercq
	- ENGINE:
		* Fixed #2061: The sender-access file is not backed-up and has no working copy
		* Cleanup of the mbox_add_mta_cfg_autorespond_data() subroutine
		* Cleanup of the mbox_add_sasl_data() subroutine
		* Cleanup of the mbox_del_sasl_data() subroutine

2009-11-15 Benedikt Heintel
	- GUI:
		* Changed class compatibility to PHP5
	- PACKAGE:
		* Updated License Text (PHP Files)
		* Updated License Text (CSS Files)
		* Updated License Text (JS Files)
	- TOOLS:
		* Updated PHPmyAdmin to version 3.2.3

2009-11-15 Laurent Declercq
	- PACKAGE:
		* Updated License Text (All Makefile)

2009-11-13 Benedikt Heintel
        - ENGINE:
                * Fixed #2051: Again ispcp-dsk-quota message
	- PACKAGE:
		* Updated License Text (Engine and Make Files)

2009-11-11 Sebastian Sellmeier
	- GUI:
		* Fixed #2039: Disk Usage in Percent is wrong

2009-11-09 Christian Hernmarck
	- ENGINE:
		* Fixed #2034: ispcp-backup error (I hope it's fixed - could not reproduce)
		* Fixed #2043: Creating similar mail-addresses causes problems

2009-11-05 Laurent Declercq
	- DISTS:
		* Fixed openSUSE runlevels

2009-11-04 Christian Hernmarck
	- CONFIG:
		* Fixed #2060: increase fastcgi-timeout for user-domains

2009-11-01 Marc Pujol
	- CONFIGS:
		* Fixed #2052: SPF registry error

2009-10-23 Laurent Declercq
	- GUI: