@@ -1,5 +1,5 @@
 ispcp_table = Dutch
-ispcp_language = _: Gelokaliseerde taal
+ispcp_language = Dutch
 ispcp_languageSetlocaleValue = nl_NL
 encoding = codering
 ispCP Omega a Virtual Hosting Control System = ispCP Omega een Virtueel Hosting Beheer Systeem
